[gd_scene load_steps=5 format=2]

[ext_resource path="res://img/background.png" type="Texture" id=1]
[ext_resource path="res://img/logo.png" type="Texture" id=2]
[ext_resource path="res://Buttons.gd" type="Script" id=3]
[ext_resource path="res://img/play.png" type="Texture" id=4]

[node name="World" type="Node"]

[node name="Background" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="background" type="Sprite" parent="Background"]
position = Vector2( 961.329, 537.5 )
scale = Vector2( 0.514643, 0.502315 )
texture = ExtResource( 1 )

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Logo" type="Control" parent="Menu"]
editor/display_folded = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -322.0
margin_right = 322.0
margin_bottom = 400.0
__meta__ = {
"_edit_group_": true
}

[node name="logo" type="Sprite" parent="Menu/Logo"]
position = Vector2( 322, 140 )
scale = Vector2( 0.192135, 0.192135 )
texture = ExtResource( 2 )

[node name="Buttons" type="Control" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -380.0
margin_top = -180.0
margin_right = 360.0
margin_bottom = 290.0
script = ExtResource( 3 )

[node name="Start" type="TextureButton" parent="Menu/Buttons"]
margin_left = 180.0
margin_top = 10.0
margin_right = 1130.0
margin_bottom = 590.0
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 4 )

[node name="Controls" type="Button" parent="Menu/Buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = 95.0
margin_right = 150.0
margin_bottom = 155.0
rect_pivot_offset = Vector2( 176, 24.7894 )
text = "Controls"

[node name="Exit" type="Button" parent="Menu/Buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = 205.0
margin_right = 150.0
margin_bottom = 265.0
rect_pivot_offset = Vector2( 176, 24.7894 )
text = "Exit"
[connection signal="mouse_entered" from="Menu/Buttons/Start" to="Menu/Buttons" method="_on_Start_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Buttons/Start" to="Menu/Buttons" method="_on_Start_mouse_exited"]
[connection signal="pressed" from="Menu/Buttons/Start" to="Menu/Buttons" method="_on_Start_pressed"]
[connection signal="pressed" from="Menu/Buttons/Controls" to="Menu/Buttons" method="_on_Controls_pressed"]
[connection signal="pressed" from="Menu/Buttons/Exit" to="Menu/Buttons" method="_on_Exit_pressed"]
